# coyotesin.space

./: .gitignore  .gitmodules  .python-version  CNAME  Makefile  README.md  archives.html  archives2.html  authors.html  blog_index.html  blog_index2.html  brief-update.html  browserconfig.xml  camping-dreams-are-weird.html  categories.html  categories2.html  custom-emoji-activate.html  custom-emoji-part-deux.html  fabfile.py  fursona-sundries.html  in-which-i-dont-imitate-garfield.html  index.html  keybase.txt  package-lock.json  package.json  pelicanconf.py  proof.md.asc.txt  publishconf.py  pull_bulma.sh  pyproject.toml  requirements.txt  returning-to-the-guitar.html  site.webmanifest  starting-blog.html  tags.html  tags2.html  tasks.py  templates-fuget.html  what-prompts-fursona-changes.html  which-office-suite-am-i-using.html
.well-known/: button.json  discord  fursona
2018/: custom-emoji-activate.html  custom-emoji-part-deux.html  in-which-i-dont-imitate-garfield.html  starting-blog.html  templates-fuget.html  which-office-suite-am-i-using.html
2019/: camping-dreams-are-weird.html  fursona-sundries.html  returning-to-the-guitar.html
2020/: what-prompts-fursona-changes.html
articles/: index.html  index2.html  index3.html
author/: kay-ohtie.html  kay-ohtie2.html  kay-ohtie3.html
category/: blog.html  blog2.html  general.html  general2.html  story.html
content/: first-post.md
css/: style.css  style.min.css
drafts/: home-is-where.html  new-job-budding-hobbies-and-family-health.html  please-please-just-be-honest-why-you-added-me.html
js/: packed.js
(+164 files in other folders)
